--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
   "main": "dist/angularfire.js",
   "ignore": [
     "**/*",
-    "!dist/angularfire.js"
+    "!dist/*.js"
+    "!*.md"
   ],
   "dependencies": {
     "angular": "1.3.x || 1.4.x",
